Add `imagePullPolicy: Always` to the K8 deployments

--- a/k8s/webclientperf-client-deployment.yml
+++ b/k8s/webclientperf-client-deployment.yml
@@ -19,3 +19,4 @@ spec:
           image: csmiles/webclientperf:client
           ports:
             - containerPort: 8180
+          imagePullPolicy: Always
