--- a/k8s/webclientperf-server-deployment.yml
+++ b/k8s/webclientperf-server-deployment.yml
@@ -19,3 +19,4 @@ spec:
           image: csmiles/webclientperf:server
           ports:
             - containerPort: 8080
+          imagePullPolicy: Always
